Created script to download mimeTypes; Fix of validations and CLI